--- a/repo/java/spring-boot (1)/spring-boot/src/main/resources/templates/books-list.html
+++ b/repo/java/spring-boot (1)/spring-boot/src/main/resources/templates/books-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Books List</title>
-    <link rel="stylesheet" href="/styles1.css"/>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
 <h1>Мои любимые книги</h1>
