--- a/repo/java/spring-boot (1)/spring-boot/src/main/resources/templates/edit-form.html
+++ b/repo/java/spring-boot (1)/spring-boot/src/main/resources/templates/edit-form.html
@@ -1,30 +1,28 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Create Book</title>
+    <title>Edit Book</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <form method="post" action="/update">
-    <input type="hidden"
-           name="id"
-           th:value="${book.id}"
-    />
-
-    <input type="text"
-           name="name"
-           placeholder="Book name"
-    th:value="${book.name}"/>
-    <input type="text"
-           name="author"
-           placeholder="Book author"
-    th:value="${book.author}"/>
-    <input type="text"
-           name="pages"
-           placeholder="Numbers of pages"
-    th:value="${book.pages}"/>
-
-    <input type="submit"/>
-
+    <input type="hidden" name="id" th:value="${book.id}">
+    <label>
+        Name<br>
+        <input type="text" name="name" th:value="${book.name}" required>
+    </label>
+    <br>
+    <label>
+        Author<br>
+        <input type="text" name="author" th:value="${book.author}" required>
+    </label>
+    <br>
+    <label>
+        Pages<br>
+        <input type="number" name="pages" th:value="${book.pages}" required>
+    </label>
+    <br>
+    <input type="submit" value="Save Changes">
 </form>
 </body>
 </html>
